# FSL-Fedeerated-Split-Learning

./: README.md  pyproject.toml  requirements.txt
docs/: PAPER_ALIGNMENT.md
src/fslt_socket/: __init__.py  aggregation.py  client.py  config.py  data_loader.py  metrics.py  model.py  protocol.py  round_control.py  split_server.py
tests/: test_aggregation.py  test_protocol.py  test_round_control.py
